--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -1,10 +1,7 @@
-* {
-   margin: 0;
-   font-family: "Helvetica"!important;
-}
-
 html, body {
    height: 100%;
+   margin: 0;
+   font-family: Helvetica, sans-serif;
 }
 
 nav {
@@ -13,17 +10,17 @@ nav {
    width: 100%;
    background-color: rgba(0,0,0,0.5);
    z-index: 99;
-   text-align: center;
+   text-align: left;
    display: block;
 }
 
 a{
    color: white;
-   margin-left: 30px;
+   margin-left: 50px;
    line-height: 50px;
    text-decoration: none;
-   font-size: 0.8em !important;
-   font-style: bold !important;
+   font-size: 14px;
+   font-weight: 600;
 }
 
 .section {
@@ -50,10 +47,3 @@ a{
    background-image: url("../img/8.jpg");
 }
 
-.hero{
-   color: white;
-   font: bold 99px;
-   letter-spacing: 10px;
-   padding: 6px;
-   text-align: right!important;
-}
