--- a/css/main.css
+++ b/css/main.css
@@ -190,3 +190,13 @@ h7{
    line-height: 20px;
    margin-left: 10px;
 }
+
+.class.track list{
+   color: black;
+   text-align: center;
+   text-decoration: none;
+   font-size: 16px;
+   font-family:'Lato', sans-serif;
+   font-weight: 700;
+   font-style: italic;
+}
