--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ p{
    font-size: 17px;
    font-weight: 400;
    text-align: left;
-   font-style: italic;
+   line-height: 24px;
    margin-bottom: 12px;
    width: 95%;
    margin-left: 10px;
